--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_main"
-    app:startDestination="@id/coinsFragment">
+    app:startDestination="@id/coinsMenuFragment">
     <fragment
-        android:id="@+id/coinsFragment"
-        android:name="com.hxl.cryptonumismatist.ui.fragments.coins.main.CoinsFragment"
-        android:label="fragment_coins"
-        tools:layout="@layout/fragment_coins" />
+        android:id="@+id/coinsMenuFragment"
+        android:name="com.hxl.cryptonumismatist.ui.fragments.coins.main.CoinsMenuFragment"
+        android:label="fragment_coins_menu"
+        tools:layout="@layout/fragment_coins_menu" />
 </navigation>
