--- a/app/src/main/res/layout/dialog_coin.xml
+++ b/app/src/main/res/layout/dialog_coin.xml
@@ -3,18 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <FrameLayout
+        <RelativeLayout
             android:id="@+id/standard_bottom_sheet"
             style="@style/Widget.Material3.BottomSheet"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
-            <!-- Drag handle for accessibility -->
             <com.google.android.material.bottomsheet.BottomSheetDragHandleView
                 android:id="@+id/drag_handle"
                 android:layout_width="match_parent"
@@ -25,7 +20,8 @@
                 style="@style/CN_DialogItem"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="48dp"
+                android:layout_below="@id/drag_handle"
+                android:layout_marginTop="-16dp"
                 android:text="@string/add_to_bookmarks"
                 app:drawableStartCompat="@drawable/sl_bookmark"
                 tools:text="Add to bookmarks" />
@@ -35,11 +31,10 @@
                 style="@style/CN_DialogItem"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="98dp"
+                android:layout_below="@id/dialog_coin_bookmark"
                 android:text="@string/visit_explorer"
                 app:drawableStartCompat="@drawable/language"
                 tools:text="Visit Explorer" />
 
-        </FrameLayout>
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+        </RelativeLayout>
 </layout>
