feat: add error indicator to coins-menu

--- a/app/src/main/res/layout/fragment_coins_menu.xml
+++ b/app/src/main/res/layout/fragment_coins_menu.xml
@@ -3,6 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+        <variable name="coin_error" type="String" />
+    </data>
+
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -28,7 +32,33 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:visibility="gone" />
+            android:visibility="gone"
+            tools:visibility="invisible" />
+
+        <ImageView
+            android:id="@+id/icon_coin_error"
+            android:layout_width="@dimen/error_icon_width"
+            android:layout_height="@dimen/error_icon_height"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center"
+            android:src="@drawable/error"
+            android:visibility="gone"
+            tools:visibility="invisible"
+            android:importantForAccessibility="no" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/text_coin_error"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/error_icon_height"
+            android:gravity="center"
+            android:text="@{coin_error}"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
+            android:visibility="gone"
+            tools:text="Error was caused because of.."
+            tools:visibility="invisible" />
 
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
