--- a/app/src/main/res/layout/shimmer_coin_details.xml
+++ b/app/src/main/res/layout/shimmer_coin_details.xml
@@ -118,7 +118,7 @@
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/details_graph_size"
+                android:layout_height="@dimen/error_icon_height"
                 android:background="?attr/colorSecondary"
                 android:padding="@dimen/default_padding" />
 
