--- a/app/src/main/res/layout/fragment_coin_details.xml
+++ b/app/src/main/res/layout/fragment_coin_details.xml
@@ -193,7 +193,7 @@
                         <com.github.mikephil.charting.charts.LineChart
                             android:id="@+id/price_graph"
                             android:layout_width="match_parent"
-                            android:layout_height="@dimen/details_graph_size"
+                            android:layout_height="@dimen/error_icon_height"
                             android:padding="@dimen/default_padding" />
 
                         <HorizontalScrollView
@@ -201,7 +201,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_alignTop="@id/price_graph"
-                            android:layout_marginTop="@dimen/details_graph_size"
+                            android:layout_marginTop="@dimen/error_icon_height"
                             android:scrollbarSize="0dp">
 
                             <com.google.android.material.chip.ChipGroup
@@ -270,25 +270,27 @@
                         <ProgressBar
                             android:id="@+id/pb_graph"
                             android:layout_width="wrap_content"
-                            android:layout_height="@dimen/details_graph_size"
+                            android:layout_height="@dimen/error_icon_height"
                             android:layout_centerHorizontal="true"
                             android:visibility="gone" />
 
-                        <com.google.android.material.imageview.ShapeableImageView
+                        <ImageView
                             android:id="@+id/icon_graph_wifi_off"
-                            android:layout_width="@dimen/graph_icon_size"
-                            android:layout_height="@dimen/details_graph_size"
+                            android:layout_width="@dimen/error_icon_width"
+                            android:layout_height="@dimen/error_icon_height"
                             android:layout_centerHorizontal="true"
                             android:src="@drawable/wifi_off"
-                            android:visibility="gone" />
+                            android:visibility="gone"
+                            android:importantForAccessibility="no" />
 
-                        <com.google.android.material.imageview.ShapeableImageView
+                        <ImageView
                             android:id="@+id/icon_graph_error"
-                            android:layout_width="@dimen/graph_icon_size"
-                            android:layout_height="@dimen/details_graph_size"
+                            android:layout_width="@dimen/error_icon_width"
+                            android:layout_height="@dimen/error_icon_height"
                             android:layout_centerHorizontal="true"
                             android:src="@drawable/error"
-                            android:visibility="gone" />
+                            android:visibility="gone"
+                            android:importantForAccessibility="no" />
 
                         <com.google.android.material.textview.MaterialTextView
                             android:id="@+id/graph_error_text"
